New Arrivasl and Content Card

--- a/styles/components/index.css
+++ b/styles/components/index.css
@@ -1,2 +1,12 @@
 @import "./header.css";
 @import "./footer.css";
+@import "./new-arrivals.css";
+
+.main {
+    width: 100%;
+    max-width: 1280px;
+    padding: 2rem;
+    min-height: calc(100dvh - 111px);
+    box-sizing: border-box;
+    margin-inline: auto;
+}
