--- a/styles/components/product-card.css
+++ b/styles/components/product-card.css
@@ -111,6 +111,10 @@
     margin-bottom: 5rem;
 }
 
+.vie-more_btn:hover {
+    box-shadow: 1px 1px 49px -3px rgba(0,0,0,0.55);
+}
+
 .banner-container {
     width: 100%; 
     height: 443px; 
@@ -176,6 +180,12 @@
     margin-bottom: 5rem;
 }
 
+.banner-summer-season > .shop-btn:hover {
+    background-color: var(--color-white);
+    color: var(--color-primary);
+    border: none;
+    box-shadow: 1px 1px 49px -3px rgba(0,0,0,0.55);
+}
 /* icons */
 
 .features-container {
