--- a/styles/index.css
+++ b/styles/index.css
@@ -9,6 +9,7 @@
     --color-primary: #ED1C24;
     --color-black: #191919;
     --color-white: #ffffff; 
+    --color-gray: #777777;
     --color-darker-gray: #cccccc;
     --color-lighter-gray: #fafafa;
     --color-second-lighter: #A86A3D; 
