--- a/styles/components/product-page/product-page.css
+++ b/styles/components/product-page/product-page.css
@@ -274,18 +274,89 @@
     font-size: 14px;
     color: #555;
 }
-.details svg{
+
+.details svg {
     width: 20px;
     height: 20px;
     margin-right: 5px;
 }
 
-.guarantee{
+.guarantee {
     width: 100%;
 
 }
+
 .guarantee img {
     margin-top: 10px;
     width: 100%;
 
 }
+
+/* Diseño móvil */
+@media (max-width: 768px) {
+    .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .column-left {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        /* Permite que las imágenes bajen a la siguiente línea */
+        gap: 10px;
+        justify-content: center;
+
+    }
+
+    .column-left img {
+        width: calc(25% - 10px);
+        /* 25% del ancho disponible para 4 imágenes por fila */
+        max-width: 80px;
+        /* Limita el tamaño máximo de las imágenes */
+        height: auto;
+    }
+
+    .column-center {
+        width: 100%;
+        text-align: center;
+    }
+
+    .column-center img {
+        width: 90%;
+        height: auto;
+    }
+
+    .column-right {
+        width: 100%;
+    }
+
+    .guarantee img {
+        width: 90%;
+        height: auto;
+    }
+
+    .quantity-container {
+        display: grid;
+    }
+
+    .quantity {
+        justify-content: center;
+        gap: 15px;
+    }
+
+    .quantity button,
+    .quantity input {
+        width: 80px;
+        height: 50px;
+    }
+
+    .add-to-cart {
+        width: 100%;
+        max-width: 90%;
+        height: 45px;
+    }
+}
+
