--- a/styles/components/cart-page/cart-page.css
+++ b/styles/components/cart-page/cart-page.css
@@ -22,13 +22,13 @@
 
 .breadcrumbs {
     font-size: 1.5rem;
-    color: #777;
+    color: var(--color-black);
     align-content: center;
     font-family: 'Jost Variable';
 }
 
 .breadcrumbs a {
-    color: #333;
+    color: var(--color-black);
     text-decoration: none;
     font-size: 1.5rem;
 }
@@ -45,7 +45,7 @@
     margin-left: auto;
     font-family: Arial, sans-serif;
     font-size: 16px;
-    color: #333;
+    color: var(--color-gray);
 }
 
 .wrap-product {
@@ -60,7 +60,7 @@
 
 .wrap-product span {
     font-size: 14px;
-    color: #555;
+    color: var(--color-gray);
     font-family: 'Poppins';
 }
 
@@ -78,7 +78,7 @@
 }
 
 .subtotal-label {
-    color: #555;
+    color: var(--color-gray);
     font-family: 'Volkhov';
 
 }
@@ -89,8 +89,8 @@
 
 .checkout-btn {
     width: 100%;
-    background-color: #e63946;
-    color: #fff;
+    background-color: var(--color-primary);
+    color: var(--color-white);
     border: none;
     padding: 10px 15px;
     font-size: 10px;
@@ -104,17 +104,15 @@
 }
 
 .checkout-btn:hover {
-    background-color: #d62839;
+    background-color: var(--color-primary);
 }
 
 .view-cart {
     display: block;
     text-align: center;
     font-size: 14px;
-    color: #007bff;
-    text-decoration: none;
+    color: var(--color-black);
     font-family: 'Volkhov';
-
 }
 
 .view-cart:hover {
@@ -124,7 +122,7 @@
 
 /* General container styling */
 .cart-container {
-    width: 80%;
+    width: 100%;
     margin: 20px auto;
     border-collapse: collapse;
 }
@@ -185,7 +183,7 @@
 
 .item-color {
     font-size: 16px;
-    color: #666;
+    color: var(--color-gray);
     font-family: 'Volkhov';
 }
 
@@ -213,7 +211,7 @@
 }
 
 .qty-btn {
-    background: #f1f1f1;
+    background: var(--color-lighter-gray);
     border: 1px solid #ddd;
     width: 30px;
     height: 30px;
